# Snake-SFML

./: .gitignore  CMakeLists.txt  README.md  Snake.sln
Debug/: Snake.exp  Snake.lib
Release/: Game_Over_State.cpp  Game_Over_State.hpp  ICommand.hpp  IState.hpp  Menu_State.cpp  Menu_State.hpp  Pause_State.cpp  Pause_State.hpp  Play_State.cpp  Play_State.hpp  Snake.exp  Snake.iobj  Snake.ipdb  Snake.vcxproj.filters  Snake_Controller.h  highscore.txt  main.cpp
Snake/: CMakeLists.txt  Debug_Window.cpp  Debug_Window.hpp  Game.cpp  Game.h  Game_Over_State.cpp  Game_Over_State.hpp  IContext.hpp  IState.hpp  Menu_State.cpp  Menu_State.hpp  Options_State.cpp  Options_State.hpp  Pause_State.cpp  Pause_State.hpp  Play_State.cpp  Play_State.hpp  Snake.vcxproj  Snake_Rule_Monitor.cpp  Static_Graphic.cpp  highscore.txt
Snake/Debug/: Snake.exe.recipe  vc143.idb
Snake/Debug/Snake.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Snake.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  link.write.2u.tlog
Snake/Release/Snake.tlog/: CL.command.1.tlog  Snake.lastbuildstate
Snake/x64/Debug/: vc143.idb
Snake/x64/Debug/Snake.tlog/: CL.command.1.tlog  Snake.lastbuildstate
src/: Debug_Window.cpp  Debug_Window.hpp  IReceiver.hpp  IState.hpp  Menu_State.cpp  Menu_State.hpp  Pause_State.cpp  Play_State.cpp  Snake.h  Snake_Controller.cpp  Snake_Rule_Monitor.cpp  Snake_Rule_Monitor.h  Static_Graphic.h  main.cpp
